@@ -1,3 +1,6 @@
+2017-10-25 (0.12.10)
+	COMMON: optimise byref let
+
 2017-10-21 (0.12.10)
 	COMMON: optimise array handling
 
